重构部分